Assign default roles from Teams to User (#2947)